--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 </head>
 <body>
     <header>
-        <h1>
-            Appointments App
-        </h1>
+        <div class="header-container">
+            <p>Developed By Dario Castiglione</p>
+            <h1>
+                Appointments App
+            </h1>
+
+        </div>
     </header>
  
     <main>
@@ -27,19 +31,24 @@
             </div>
 
         </div>
-        <div class="card">
+        <div class="card  completed">
             <div class="title-card" >
                 <p>Completati</p>
                 <img class="dropimg" id="completati" src="./img/up-arrow-svgrepo-com (2).svg" width="40" height="40" alt="arrow">
 
             </div>
         </div>
-        <div class="card">
+        <div class="card add">
             <div class="title-card" >
                 <p>Aggiungi</p>
                 <img class="dropimg" id="aggiungi" src="./img/up-arrow-svgrepo-com (2).svg" width="40" height="40" alt="arrow">
 
             </div>
+            <form action="#">
+
+                <textarea name="addTask" id="" cols="50" rows="5"></textarea>
+                <button>Aggiungi</button>
+            </form>
         </div>
 
 
