--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img class="dropimg" id="aggiungi" src="./img/up-arrow-svgrepo-com (2).svg" width="40" height="40" alt="arrow">
 
             </div>
-            <form action="#">
+            <form class="add-form">
 
                 <textarea name="addTask" id="" cols="50" rows="5"></textarea>
                 <button>Aggiungi</button>
