--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <p>Da Completare</p>
                 <img class="dropimg" id="daCompletare" src="./img/up-arrow-svgrepo-com (2).svg" width="40" height="40" alt="arrow">
             </div>
+            <div class="wrapper"></div>
 
         </div>
         <div class="card  completed">
@@ -37,6 +38,7 @@
                 <img class="dropimg" id="completati" src="./img/up-arrow-svgrepo-com (2).svg" width="40" height="40" alt="arrow">
 
             </div>
+            <div class="wrapper"></div>
         </div>
         <div class="card add">
             <div class="title-card" >
@@ -44,6 +46,8 @@
                 <img class="dropimg" id="aggiungi" src="./img/up-arrow-svgrepo-com (2).svg" width="40" height="40" alt="arrow">
 
             </div>
+            <div class="wrapper"></div>
+            
             <form class="add-form">
 
                 <textarea name="addTask" id="" cols="50" rows="5"></textarea>
