--- a/index.html
+++ b/index.html
@@ -29,14 +29,31 @@
                 <p>Da Completare</p>
                 <img class="dropimg" id="daCompletare" src="./img/up-arrow-svgrepo-com (2).svg" width="40" height="40" alt="arrow">
             </div>
+            <div class="card-nav">
+                <label for="order">Ordina per: </label>
+                <select  id="order">
+                    <option value="">Scegli ordine</option>
+                    <option value="dataC">Data Crescente</option>
+                    <option value="dataD">Data Decrescente</option>
+                    <option value="alfabetico">Alfabetico</option>
+                </select>
+                </div>
             <div class="wrapper"></div>
 
         </div>
-        <div class="card  completed">
+        <div class="card completed">
             <div class="title-card" >
                 <p>Completati</p>
                 <img class="dropimg" id="completati" src="./img/up-arrow-svgrepo-com (2).svg" width="40" height="40" alt="arrow">
-
+            </div>
+                <div class="card-nav">
+                    <label for="order">Ordina per: </label>
+                    <select  id="order">
+                        <option value="">Scegli ordine</option>
+                        <option value="dataC">Data Crescente</option>
+                        <option value="dataD">Data Decrescente</option>
+                        <option value="alfabetico">Alfabetico</option>
+                    </select>
             </div>
             <div class="wrapper"></div>
         </div>
