--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <label for="order">Ordina per: </label>
                 <select  id="order">
                     <option value="">Scegli ordine</option>
-                    <option value="dataC">Data Crescente</option>
-                    <option value="dataD">Data Decrescente</option>
+                    <option value="dataC">Meno Recente</option>
+                    <option value="dataD">Più Recente</option>
                     <option value="alfabetico">Alfabetico</option>
                 </select>
                 </div>
@@ -50,8 +50,8 @@
                     <label for="order">Ordina per: </label>
                     <select  id="order">
                         <option value="">Scegli ordine</option>
-                        <option value="dataC">Data Crescente</option>
-                        <option value="dataD">Data Decrescente</option>
+                        <option value="dataC">Meno Recente</option>
+                        <option value="dataD">Più Recente</option>
                         <option value="alfabetico">Alfabetico</option>
                     </select>
             </div>
