--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="header-container">
-            <p>Developed By Dario Castiglione</p>
+            <p>Developed By <a href="https://www.linkedin.com/in/dario-castiglione-26230b180/" target="_blank" rel="noopener noreferrer">Dario Castiglione</a></p>
             <h1>
                 Appointments App
             </h1>
@@ -57,17 +57,16 @@
             </div>
             <div class="wrapper"></div>
         </div>
-        <div class="card add">
+        <div class="card add ">
             <div class="title-card" >
                 <p>Aggiungi</p>
                 <img class="dropimg" id="aggiungi" src="./img/up-arrow-svgrepo-com (2).svg" width="40" height="40" alt="arrow">
 
             </div>
-            <div class="wrapper"></div>
+            
             
             <form class="add-form">
-
-                <textarea name="addTask" id="" cols="50" rows="5"></textarea>
+                    <textarea name="addTask" placeholder="Aggiungi qualcosa" id="" cols="50" rows="5"></textarea>
                 <button>Aggiungi</button>
             </form>
         </div>
@@ -75,10 +74,6 @@
 
     </main>
 
-
-    <!-- <footer>
-        <p>Copyright 2021 - <a target="/blank" href="https://www.linkedin.com/in/dario-castiglione-26230b180/">Dario Castiglione</a></p>
-    </footer> -->
 
     <script src="./js/index.js" type="module"></script>
 </body>
