--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <label for="order">Ordina per: </label>
                 <select>
                     <option value="">Scegli ordine</option>
-                    <option value="dataC">Meno Recente</option>
-                    <option value="dataD">Più Recente</option>
+                    <option value="dataC">Data Crescente</option>
+                    <option value="dataD">Data Decrescente</option>
                     <option value="alfabetico">Alfabetico</option>
                 </select>
             </div>
@@ -53,8 +53,8 @@
                 <label for="order">Ordina per: </label>
                 <select>
                     <option value="">Scegli ordine</option>
-                    <option value="dataC">Meno Recente</option>
-                    <option value="dataD">Più Recente</option>
+                    <option value="dataC">Data Crescente</option>
+                    <option value="dataD">Data Decrescente</option>
                     <option value="alfabetico">Alfabetico</option>
                 </select>
             </div>
@@ -70,6 +70,7 @@
 
             <form class="add-form">
                 <textarea name="addTask" placeholder="Aggiungi qualcosa" cols="50" rows="5"></textarea>
+                <input type="date">
                 <button>Aggiungi</button>
             </form>
         </div>
